<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9acbcb"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <!-- Pantalla para mostrar el resultado -->
    <TextView
            android:id="@+id/tvTextoA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_resultados"
            android:paddingStart="20dp"
            android:paddingTop="8dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="30sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="25dp">

        <!-- Primera fila para botones de borrado -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

            <Button
                    android:id="@+id/button_delete"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/botonborrado"
                    android:gravity="center"
                    android:text="B"
                    android:textSize="20sp" />

            <Button
                    android:id="@+id/button_clear"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/botonborrado"
                    android:gravity="center"
                    android:text="AC"
                    android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button17"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button17"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button18"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button18"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button19"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button19"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button20"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button20"
                    android:textSize="20sp"/>
        </LinearLayout>

        <!-- Segunda fila científica -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button21"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button21"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button22"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button22"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button23"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button23"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button24"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_opcomplejas"
                    android:gravity="center"
                    android:text="@string/button24"
                    android:textSize="20sp"/>
        </LinearLayout>

        <!-- Cuarta fila con botones numéricos y operadores -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

            <Button
                    android:id="@+id/button1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/button1"
                    android:textSize="20sp"
                    android:background="@drawable/border_button"/>

            <Button
                    android:id="@+id/button2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button2"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button3"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button4"
                    android:textSize="20sp"/>
        </LinearLayout>

        <!-- Quinta fila de botones -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button5"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button6"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button7"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button8"
                    android:textSize="20sp"/>
        </LinearLayout>

        <!-- Sexta fila de botones -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button9"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button9"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button10"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button10"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button11"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button11"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button12"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button12"
                    android:textSize="20sp"/>
        </LinearLayout>

        <!-- Séptima fila de botones -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/button13"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button13"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button14"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button14"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button15"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_equals"
                    android:gravity="center"
                    android:text="@string/button15"
                    android:textSize="20sp"/>

            <Button
                    android:id="@+id/button16"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/border_button"
                    android:gravity="center"
                    android:text="@string/button16"
                    android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
